exports[`Formschema Wizard > creates a new formschema based on own uploaded objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "Test",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": "a1",
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on own objectschema by code insterting #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "Test",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on control objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "control",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on scope objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "scope",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on asset objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "asset",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on process objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on incident objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "incident",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on document objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "document",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on person objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "person",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > creates a new formschema based on scenario objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "scenario",
  "name": {
    "de": "Test Formschema"
  },
  "sorting": null,
  "subType": "TF",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by upload based on process objectschema #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": {
    "de": "Test Formschema"
  },
  "subType": "PRO_DataTransfer",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by code inserting based on process objectschema  #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": {
    "de": "Test Formschema"
  },
  "subType": "PRO_DataTransfer",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by uploading based on process objectschema also manually uploaded #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": {
    "de": "Test Formschema"
  },
  "subType": "PRO_DataTransfer",
  "translation": {
    "de": {}
  }
};

exports[`Formschema Wizard > imports a formschema by uploading based on process objectschema by code insterting  #0`] =
{
  "content": {
    "elements": [],
    "options": {
      "direction": "vertical",
      "format": "group"
    },
    "type": "Layout"
  },
  "modelType": "process",
  "name": {
    "de": "Test Formschema"
  },
  "subType": "PRO_DataTransfer",
  "translation": {
    "de": {}
  }
};
